# ConsoleStoryEngine

./: .gitignore  README.md
headers/: main.h
src/: CMakeLists.txt  Makefile  NarrateEngine  NarrateEngine.cpp  calculator.cpp
tracks/: AddTracksHere.txt
